# manubot

./: .appveyor.yml  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  404.html  LICENSE.html  LICENSE.md  MANIFEST.in  README.md  conftest.py  index.html  pyproject.toml  setup.cfg  setup.py  sitemap.xml  this_change_triggers_new_build.txt
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
LICENSE/: index.html
ci/: deploy-docs.sh
manubot/: __init__.py  arxiv.py  citations.py  command.py  conftest.py  filters.py  manubot.py  manuscript.py  metadata.py  process.py  pubmed.py  util.py  utilities.py
manubot/ai_revision/: ai_revision_command.py
manubot/builder/: build_command.py
manubot/builder/pandoc-data/defaults/: common.yaml  docx.yaml
manubot/builder/tests/: test_build_command.py
manubot/cite/: __init__.py  arxiv.py  citations.py  cite.py  cite_command.py  citekey.py  citeproc.py  csl_dict.py  csl_item.py  doi.py  handle.py  handlers.py  isbn.py  metadata.py  plain-pandoc-filter.lua  pubmed.py  types.py  unpaywall.py  url.py  util.py  wikidata.py  zotero.py
manubot/cite/curie/: __init__.py  bioregistry.json  namespaces.json
manubot/cite/tests/: .gitignore  test_api.py  test_arxiv.py  test_citations.py  test_cite_command.py  test_citekey.py  test_citekey_api.py  test_citeproc.py  test_csl_dict.py  test_csl_item.py  test_curie.py  test_doi.py  test_handlers.py  test_isbn.py  test_pubmed.py  test_types.py  test_unpaywall.py  test_url.py  test_util.py  test_wikidata.py  test_zotero.py
manubot/cite/tests/cite-command-rendered/: input-bibliography.json  output-bibliography.json  output-bibliography.yaml  references-html-2.11.1.1.html  references-html-2.11.3.1.html  references-html-2.7.2.html  references-html-2.8.html  references-html.html  references-jats-2.11.1.1.xml  references-jats-2.7.3.xml  references-jats-2.8.xml  references-jats-2.9.2.xml  references-jats.xml  references-markdown-2.11.1.1.md  references-markdown-2.11.3.1.md  references-markdown-2.8.md  references-markdown-2.9.2.md  references-markdown.md  references-plain-2.11.1.1.txt  references-plain-2.11.3.1.txt  references-plain-2.7.2.txt  references-plain-2.8.txt  references-plain.txt
manubot/cite/tests/csl-json/: test_csl_pruning.py
manubot/pandoc/: bibliography.py  cite.py  cite_filter.py  filter.py  html_filter.py  util.py
manubot/pandoc/tests/: input-with-cites.md  output-with-cites.txt  test_bibliography.py  test_cite.py  test_cite_filter.py  test_util.py
manubot/pandoc/tests/bibliographies/: bibliography.json  bibliography.nbib  bibliography.ris
manubot/pandoc/tests/test_cite_filter/: bibliography.bib  bibliography.json  filter-input.json  input.md  output.txt
manubot/pandoc_filter/: cite.py
manubot/pandoc_filter/tests/: input-with-cites.md  output-with-cites.md  output-with-cites.txt  test_cite.py
manubot/pandoc_filter/tests/bibliographies/: bibliography.bib  bibliography.json
manubot/process/: __init__.py  bibliography.py  ci.py  citations.py  head-template.html  header-includes-template.html  header-includes-template.md  jinja.py  manuscript.py  metadata.py  process.py  process_command.py  requests_cache.py  thumbnail.py  util.py
manubot/process/tests/: test_bibliography.py  test_ci.py  test_jinja.py  test_manuscript.py  test_metadata.py  test_process_command.py  test_thumbnail.py  test_util.py
manubot/tests/: test_command.py  test_filters.py  test_imports.py  test_readme.py  test_thumbnail.py  test_util.py
manubot/webpage/: redirect-template.html  webpage_command.py
manubot/webpage/tests/: test_webpage_command.py
manubot/webpage/tests/test-manuscript/: .gitignore
media/terminal-recordings/: README.md  index.html
reference/manubot/: command.html  index.html  util.html
reference/manubot/ai_revision/: index.html
reference/manubot/ai_revision/ai_revision_command/: index.html
reference/manubot/cite/: arxiv.html  citations.html  cite_command.html  citekey.html  citeproc.html  csl_item.html  curie.html  doi.html  handlers.html  index.html  isbn.html  pubmed.html  unpaywall.html  url.html  wikidata.html  zotero.html
reference/manubot/command/: index.html
reference/manubot/pandoc/: bibliography.html  cite_filter.html  index.html  util.html
reference/manubot/process/: bibliography.html  ci.html  index.html  manuscript.html  metadata.html  process_command.html  requests_cache.html  util.html
reference/manubot/tests/: index.html  test_command.html  test_imports.html  test_readme.html  test_util.html
reference/manubot/util/: index.html
reference/manubot/webpage/: index.html  webpage_command.html
release-notes/: v0.2.0.md  v0.2.1.md  v0.2.2.md  v0.2.3.md  v0.2.4.md  v0.3.0.md  v0.3.1.md  v0.4.0.md  v0.4.1.md  v0.4.2.md  v0.5.0.md  v0.5.1.md  v0.5.2.md  v0.5.3.md  v0.5.4.md  v0.5.5.md  v0.5.6.md  v0.6.0.md  v0.6.1.md
search/: search_index.json
tests/: test_citation_ids.py  test_citations.py  test_command.py  test_imports.py  test_manubot.py  test_manubot_process.py  test_manuscript.py  test_metadata.py  test_readme.py  test_zotero.py
tests/cite-command-rendered/: references-html.html  references-markdown.md  references-plain.txt
tests/csl-json/: test_csl_pruning.py
tests/csl-json/arxiv-joss-csl/: raw.json
tests/csl-json/crossref-deep-review-csl/: pruned.json  raw.json
tests/csl-json/crossref-winter-scabs-csl/: pruned.json  raw.json
tests/csl-json/datacite-thesis-csl/: pruned.json
tests/csl-json/empty-date-parts-csl/: pruned.json  raw.json
tests/csl-json/excess-date-parts-csl/: raw.json
tests/csl-json/greycite-meta-review-csl/: pruned.json  raw.json
tests/csl-json/null-date-parts-csl/: pruned.json
tests/csl-json/pmc-scihub-study-csl/: raw.json
tests/csl-json/pubmed-scihub-study-csl/: pruned.json
tests/example-manuscript/content/: 02.body.md  manual-references.json
tests/manuscripts/: .gitignore
(+100 files in other folders)
