[build-system]
requires = ["setuptools >= 46.4.0", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "manubot/version.py"

[tool.pytest.ini_options]
# color output and show skipped
addopts = "--color=yes -rs"

[tool.black]
target-version = ['py36', 'py37', 'py38']
