# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html

[metadata]
name = manubot
description = "Python utilities for Manubot: Manuscripts, open and automated"
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = BSD 3-Clause License
license_file = LICENSE.md
url = https://github.com/manubot/manubot
project_urls =
    Source = https://github.com/manubot/manubot
    Documentation = https://manubot.github.io/manubot
    Tracker = https://github.com/manubot/manubot/issues
    Homepage = https://manubot.org
    Publication = https://greenelab.github.io/meta-review/
keywords =
    manuscript
    markdown
    pandoc
    publishing
    references
    citations
    csl
classifiers =
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Information Analysis
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
maintainer = Daniel Himmelstein, Anthony Gitter
maintainer_email = contact@manubot.org

[options]
python_requires = >=3.6
packages = find:
install_requires =
    backports.cached-property; python_version < "3.8"
    dataclasses; python_version < "3.7"
    errorhandler
    isbnlib
    jinja2
    jsonschema>=3.0.0
    packaging
    # panflute 2.0.3 and 2.0.4 fail with: Element "MetaList" received "CSL_Item"
    # https://github.com/sergiocorreia/panflute/issues/166
    panflute !=2.0.3, !=2.0.4
    pybase62
    pyyaml >= 5.1
    ratelimiter
    requests-cache
    requests
    toml

[options.extras_require]
webpage =
    opentimestamps-client
dev =
    exrex
    portray
    pre-commit
    pytest >= 3.3.0
    yamllint

[options.packages.find]
exclude =
    tests
    *.tests

[options.entry_points]
console_scripts =
    manubot = manubot.command:main
    pandoc-manubot-cite = manubot.pandoc.cite_filter:main

[options.package_data]
manubot =
    cite/*.lua
    cite/curie/*.json
    process/header-includes-template.html
    webpage/redirect-template.html

[flake8]
ignore = E203, E266, E501, F541, W503
max-line-length = 80
# TODO: refactor to reduce max-complexity to 18
max-complexity = 19
select = B,C,E,F,W,T4,B9

[isort]
profile = black
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88
