# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html

[metadata]
name = manubot
version = attr: manubot.__version__
description = "Python utilities for Manubot: Manuscripts, open and automated"
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = BSD 3-Clause License
license_files =
    LICENSE.md
url = https://github.com/manubot/manubot
project_urls =
    Source = https://github.com/manubot/manubot
    Documentation = https://manubot.github.io/manubot
    Tracker = https://github.com/manubot/manubot/issues
    Homepage = https://manubot.org
    Publication = https://greenelab.github.io/meta-review/
keywords =
    manuscript
    markdown
    pandoc
    publishing
    references
    citations
    csl
classifiers =
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Information Analysis
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
maintainer = Daniel Himmelstein, Anthony Gitter
maintainer_email = contact@manubot.org

[options]
zip_safe = False
python_requires = >=3.7
packages = find:
install_requires =
    backports.cached-property; python_version < "3.8"
    errorhandler
    isbnlib
    jinja2
    jsonschema>=3.0.0
    packaging
    # panflute 2.0.3 and 2.0.4 fail with: Element "MetaList" received "CSL_Item"
    # https://github.com/sergiocorreia/panflute/issues/166
    panflute !=2.0.3, !=2.0.4
    pybase62
    pyyaml >= 5.1
    pyrate-limiter
    requests-cache
    requests
    tomli; python_version < "3.11"

[options.extras_require]
webpage =
    opentimestamps-client
dev =
    portray
    pre-commit
    pytest >= 6.0.0
    yamllint

[options.packages.find]
exclude =
    tests
    *.tests

[options.entry_points]
console_scripts =
    manubot = manubot.command:main
    pandoc-manubot-cite = manubot.pandoc.cite_filter:main

[options.package_data]
manubot =
    cite/*.lua
    cite/curie/*.json
    process/header-includes-template.html
    webpage/redirect-template.html
